--- a/index.html
+++ b/index.html
@@ -444,6 +444,22 @@
             bottom:0;
             left:0;
             z-index: 999;
+            overflow: hidden;
+        }
+
+        .footer-text {
+            display: inline-block;
+            white-space: nowrap;
+            animation: slideText 10s linear infinite;
+        }
+
+        @keyframes slideText {
+            0% {
+                transform: translateX(-100%);
+            }
+            100% {
+                transform: translateX(100%);
+            }
         }
 
         @media (max-width: 600px) {
@@ -752,7 +768,7 @@
         }
     </script>
 <footer>
-  ✨ © 2025 Vakaar • All Rights Reserved ✨
+  <div class="footer-text">✨ © 2025 Vakaar • All Rights Reserved ✨</div>
 </footer>
 </body>
 </html>
